--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoyo Rooms</title>
-</head>
-<body>
-    <form method="GET" action="/listings/new">
-        <button>Create new listing</button>
-    </form>
-    <h3>All listings</h3>
-    <ul>
-        <% for(let listing of allListings) {%>
-            <li> <a href="/listings/<%= listing._id  %>"><%= listing.title %></a> </li>
-        <%  } %>
-    </ul>
-    
-</body>
-</html>
+<% layout("/layouts/boilerplate") -%>
+<h1>All Listings</h1>
+<div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
+  <% for(let listing of allListings){%>
+    <a href="/listings/<%= listing._id %>" class="listing-link">
+  <div class="card col">
+      <img src="<%= listing.image.url %>" class="card-img-top" alt="listing.image"  style="height: 20rem;">
+      <div class="card-img-overlay"></div>
+      <div class="card-body">
+        <p class="card-text">
+        <b><%= listing.title %> </b>  <br>
+          &#8377; <%= listing.price %> /night
+      </p>
+      </div>
+    </div>
+  </a>
+  <% } %>
+</div>
