--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,37 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>WanderLust</title>
-    </head>
-    <body>
-        <h3>Create a New Listing</h3>
-        <form method="POST" action="/listings">
-            <input name="listing[title]" placeholder="enter title"
-                type="text" />
-            <br /><br />
-            <textarea
-                name="listing[description]"
-                placeholder="enter description"></textarea>
-            <br /><br />
-            <input
-                name="listing[image]"
-                placeholder="enter image URL/Link"
-                type="text" />
-            <br /><br />
-            <input name="listing[price]" placeholder="enter price"
-                type="number" />
-            <br /><br />
-            <input name="listing[country]" placeholder="enter country"
-                type="text" />
-            <br /><br />
-            <input
-                name="listing[location]"
-                placeholder="enter location"
-                type="text" />
-            <br /><br />
-            <button>Add</button>
-        </form>
-    </body>
-</html>
+<% layout("/layouts/boilerplate") -%>
+<div class="row mt-3">
+    <div class="col-8 offset-2">
+    <h3>Create a New Listing</h3>
+    <form method="post" action="/listings" novalidate class="needs-validation">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" name="listing[title]" placeholder="Title" class="form-control" required>
+            <div class="valid-feedback">Title looks good!</div>
+            <div class="invalid-feedback">Please enter a Title</div>
+        </div>
+        
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" id="" cols="10" rows="4" class="form-control" required></textarea>
+            <div class="invalid-feedback">Please enter a Description</div>
+        </div>
+
+        <div class="mb-3">
+            <label for="image" class="form-label">Image Link</label>
+            <input type="text" name="listing[image]" placeholder="enter image url/link" class="form-control">
+        </div>
+
+        <div class="row">
+        <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input type="number" name="listing[price]" placeholder="1200" class="form-control" required>
+            <div class="invalid-feedback">Please enter a valid Price</div>
+        </div>
+      
+         <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input type="text" name="listing[country]" placeholder="India" class="form-control" required>
+            <div class="invalid-feedback">Please enter a Country</div>
+         </div>
+
+        </div>
+        
+        <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input type="text" name="listing[location]" placeholder="Akola" class="form-control" required>
+            <div class="invalid-feedback">Please enter a Location</div>
+        </div>
+        
+        <br> 
+        <button class="btn btn-dark add-btn">Add</button>
+    </form>
+    <br><br>
+</div>
+</div>
