--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,20 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zoyo Rooms</title>
-    </head>
-    <body>
-        <h3>Listing Details: </h3>
-        <ul>
-            <li><%= listing.title %></li>
-            <li><%= listing.description %></li>
-            <li> &#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-            <li><%= listing.location %></li>
-            <li><%= listing.country %></li>
-        </ul>
-        <br>
-        <button><a href="/listings/<%= listing._id %>/edit ">Edit Listing</a></button>
-    </body>
-</html>
+<% layout("/layouts/boilerplate") -%>
+<div class="row mt-3">
+    <div class="col-8 offset-2">
+    <h3><%= listing.title %> </h3>
+    </div>
+    <div class="card col-6 offset-3 show-card listing-card">
+        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+        <div class="card-body">
+            <p class="card-text">
+              <%= listing.description %> <br>
+              &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
+              <%= listing.country %> <br>
+              <%= listing.location %>
+            </p>
+        </div>
+    </div>    <br>
+</div>
+<div class="btns">
+    <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3">Edit</a>
+    
+
+        <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+            <button class="btn btn-dark add-btn offset-5">Delete</button>
+        </form>      
+</div>
+<div class="col-8 offset-3 mb-3">
+    <hr>
+    
+</div> 
